Added id to model

--- a/apps/opencs/opencs.ui
+++ b/apps/opencs/opencs.ui
@@ -22,6 +22,9 @@
     <item>
      <widget class="QTreeView" name="treeView"/>
     </item>
+    <item>
+     <widget class="QTreeView" name="treeView_2"/>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
