--- a/apps/opencs/opencs.ui
+++ b/apps/opencs/opencs.ui
@@ -18,12 +18,12 @@
     <normaloff>:/images/openmw.png</normaloff>:/images/openmw.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QTreeView" name="treeView"/>
-    </item>
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QTreeView" name="treeView_2"/>
+    </item>
+    <item>
+     <widget class="QTreeView" name="treeView"/>
     </item>
    </layout>
   </widget>
