new IdList menu item

--- a/apps/opencs/opencs.ui
+++ b/apps/opencs/opencs.ui
@@ -46,7 +46,14 @@
     </property>
     <addaction name="actionOpen"/>
    </widget>
+   <widget class="QMenu" name="menuViews">
+    <property name="title">
+     <string>Views</string>
+    </property>
+    <addaction name="actionAddIdList"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuViews"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -75,6 +82,16 @@
   <action name="actionNew_ID_List">
    <property name="text">
     <string>New ID-List</string>
+   </property>
+  </action>
+  <action name="actionAdd_IdList">
+   <property name="text">
+    <string>add IdList</string>
+   </property>
+  </action>
+  <action name="actionAddIdList">
+   <property name="text">
+    <string>add IdList</string>
    </property>
   </action>
  </widget>
