Switched idlist form tree to table

--- a/apps/opencs/views/idlist.ui
+++ b/apps/opencs/views/idlist.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>412</width>
+    <width>490</width>
     <height>400</height>
    </size>
   </property>
@@ -67,46 +67,19 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLineEdit" name="lineEdit"/>
-       </item>
       </layout>
      </widget>
     </item>
     <item>
-     <widget class="QTreeView" name="treeView">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>0</height>
-       </size>
-      </property>
+     <widget class="QTableView" name="tableView">
       <property name="alternatingRowColors">
-       <bool>true</bool>
-      </property>
-      <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectItems</enum>
-      </property>
-      <property name="indentation">
-       <number>10</number>
-      </property>
-      <property name="uniformRowHeights">
        <bool>true</bool>
       </property>
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
-      <attribute name="headerCascadingSectionResizes">
+      <attribute name="verticalHeaderVisible">
        <bool>false</bool>
-      </attribute>
-      <attribute name="headerDefaultSectionSize">
-       <number>200</number>
       </attribute>
      </widget>
     </item>
