--- a/apps/opencs/views/idlist.ui
+++ b/apps/opencs/views/idlist.ui
@@ -65,6 +65,9 @@
            <height>0</height>
           </size>
          </property>
+         <property name="indentation">
+          <number>10</number>
+         </property>
         </widget>
        </item>
       </layout>
