--- a/apps/opencs/views/idlist.ui
+++ b/apps/opencs/views/idlist.ui
@@ -81,6 +81,9 @@
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>true</bool>
+      </attribute>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
