--- a/apps/opencs/views/filter/filtertree.ui
+++ b/apps/opencs/views/filter/filtertree.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>FilterTree</class>
  <widget class="QDockWidget" name="FilterTree">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>274</width>
+    <height>235</height>
+   </rect>
+  </property>
   <property name="features">
    <set>QDockWidget::AllDockWidgetFeatures</set>
   </property>
@@ -23,6 +31,9 @@
         <width>100</width>
         <height>0</height>
        </size>
+      </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
       </property>
       <property name="indentation">
        <number>10</number>
