Default columm settings

--- a/apps/opencs/opencs.ui
+++ b/apps/opencs/opencs.ui
@@ -17,6 +17,9 @@
    <iconset resource="../launcher/resources.qrc">
     <normaloff>:/images/openmw.png</normaloff>:/images/openmw.png</iconset>
   </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowNestedDocks|QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
