--- a/apps/opencs/resources.qrc
+++ b/apps/opencs/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file alias="filters.xml">resources/defaultFilters.xml</file>
+        <file alias="columns.xml">resources/defaultColumns.xml</file>
     </qresource>
 </RCC>
