--- a/apps/opencs/views/idlist.ui
+++ b/apps/opencs/views/idlist.ui
@@ -6,30 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>562</width>
-    <height>400</height>
+    <width>661</width>
+    <height>265</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>490</width>
-    <height>400</height>
-   </size>
-  </property>
-  <property name="baseSize">
-   <size>
-    <width>400</width>
-    <height>400</height>
-   </size>
-  </property>
-  <property name="autoFillBackground">
-   <bool>false</bool>
   </property>
   <property name="features">
    <set>QDockWidget::AllDockWidgetFeatures</set>
@@ -38,7 +17,7 @@
    <string>Id List</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout">
     <item>
      <widget class="QTableView" name="tableView">
       <property name="alternatingRowColors">
@@ -49,6 +28,9 @@
       </property>
       <attribute name="horizontalHeaderVisible">
        <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>40</number>
       </attribute>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
