--- a/apps/opencs/views/filter/filtereditor.ui
+++ b/apps/opencs/views/filter/filtereditor.ui
@@ -1,22 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>FilterEditor</class>
- <widget class="QDockWidget" name="FilterEditor">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>200</width>
-    <height>169</height>
-   </rect>
-  </property>
-  <property name="features">
-   <set>QDockWidget::AllDockWidgetFeatures</set>
-  </property>
-  <property name="windowTitle">
-   <string>Filter Editor</string>
-  </property>
-  <widget class="QWidget" name="dockWidgetContents">
+  <widget class="QWidget" name="FilterEditor">
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
      <widget class="QLabel" name="keyLabel">
@@ -57,7 +42,6 @@
     </item>
    </layout>
   </widget>
- </widget>
  <resources/>
  <connections/>
 </ui>
