--- a/apps/opencs/views/idlist.ui
+++ b/apps/opencs/views/idlist.ui
@@ -1,22 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>IdList</class>
- <widget class="QDockWidget" name="IdList">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>661</width>
-    <height>265</height>
-   </rect>
-  </property>
-  <property name="features">
-   <set>QDockWidget::AllDockWidgetFeatures</set>
-  </property>
-  <property name="windowTitle">
-   <string>Id List</string>
-  </property>
-  <widget class="QWidget" name="dockWidgetContents">
+  <widget class="QWidget" name="IdList">
    <layout class="QHBoxLayout">
     <item>
      <widget class="QTableView" name="tableView">
@@ -39,7 +24,6 @@
     </item>
    </layout>
   </widget>
- </widget>
  <resources/>
  <connections/>
 </ui>
