Split filter files

--- a/apps/opencs/resources.qrc
+++ b/apps/opencs/resources.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="filters.xml">resources/defaultFilters.xml</file>
         <file alias="columns.xml">resources/defaultColumns.xml</file>
     </qresource>
     <qresource prefix="/icon/filter">
@@ -9,5 +8,9 @@
         <file alias="regex.png">resources/icon/filter/regexMatchFilter.png</file>
         <file alias="union.png">resources/icon/filter/unionFilter.png</file>
         <file alias="wildcard.png">resources/icon/filter/wildcardMatchFilter.png</file>
+    </qresource>
+    <qresource prefix="/filter">
+        <file alias="default.xml">resources/filter/default.xml</file>
+        <file alias="recordTypes.xml">resources/filter/recordTypes.xml</file>
     </qresource>
 </RCC>
