Add esm file selection for Id-List

--- a/apps/opencs/view/idlist.ui
+++ b/apps/opencs/view/idlist.ui
@@ -17,12 +17,29 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Filter File:</string>
+         <string>Filter:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="comboFilterRoot"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Source:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="comboSource">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
